Careers page file button fixed, Solutions page top solutions responsive alignment fixed

--- a/scss/style.css
+++ b/scss/style.css
@@ -5661,12 +5661,12 @@ header .mobile--header .mobile-search-wrapper .mobilesearch svg {
 }
 @media (max-width: 768px) {
   .top__section::after {
-    top: 41%;
+    top: 52%;
   }
 }
 @media (max-width: 767px) {
   .top__section::after {
-    top: 54%;
+    top: 51%;
   }
 }
 .top__section .nav {
@@ -5891,14 +5891,6 @@ header .mobile--header .mobile-search-wrapper .mobilesearch svg {
   }
 }
 @media screen and (max-width: 840.99px) {
-  .top__section::before {
-    width: 100%;
-    height: 57%;
-    top: auto;
-    left: 0;
-    right: 0;
-    bottom: -160px;
-  }
   .top__section .nav {
     width: 100%;
     margin: 0;
@@ -5919,7 +5911,7 @@ header .mobile--header .mobile-search-wrapper .mobilesearch svg {
     font-size: 24px;
   }
   .top__section::before {
-    height: 67%;
+    height: 46%;
   }
   .top__section .nav {
     width: 100%;
@@ -5931,7 +5923,7 @@ header .mobile--header .mobile-search-wrapper .mobilesearch svg {
 }
 @media screen and (max-width: 767px) {
   .top__section::before {
-    height: 54%;
+    height: 47%;
   }
 }
 @media screen and (max-width: 620.99px) {
@@ -5978,12 +5970,7 @@ header .mobile--header .mobile-search-wrapper .mobilesearch svg {
     height: auto;
   }
   .top__section::before {
-    height: 42%;
-    width: 100%;
-    top: auto;
-    right: 0;
-    left: 0;
-    bottom: 0;
+    height: 44%;
   }
   .top__section::after {
     display: none;
@@ -5996,27 +5983,30 @@ header .mobile--header .mobile-search-wrapper .mobilesearch svg {
     height: auto;
   }
 }
+@media screen and (max-width: 575px) {
+  .top__section {
+    height: auto;
+  }
+  .top__section::before {
+    height: 50%;
+  }
+}
+@media screen and (max-width: 563px) {
+  .top__section::before {
+    height: 44%;
+  }
+}
 @media screen and (max-width: 480.99px) {
   .our__solutionCLient {
     padding: 80px 0 !important;
   }
   .top__section::before {
-    height: 47%;
-    width: 100%;
-    top: auto;
-    right: 0;
-    left: 0;
-    bottom: 0;
+    height: 49%;
   }
 }
 @media screen and (max-width: 383px) {
   .top__section::before {
-    height: 39%;
-    width: 100%;
-    top: auto;
-    right: 0;
-    left: 0;
-    bottom: 0;
+    height: 41%;
   }
 }
 .herobanner {
@@ -6606,12 +6596,12 @@ header .mobile--header .mobile-search-wrapper .mobilesearch svg {
 }
 @media (max-width: 992px) {
   .services-wrapper {
-    min-height: 1800px;
+    min-height: 1350px;
   }
 }
 @media (max-width: 768px) {
   .services-wrapper {
-    min-height: 1680px;
+    min-height: 1400px;
   }
 }
 @media (max-width: 575px) {
@@ -8603,20 +8593,31 @@ body {
   right: 20px;
   transition: all 0.5s linear;
 }
+.applyform-conatiner .uploadfile-wrapper {
+  position: relative;
+  margin-bottom: 20px;
+}
 .applyform-conatiner button#custom-button {
-  background: #6CC24A;
+  background: transparent; /* $seminar-green-color */
   padding: 0 30px;
   color: #fff;
-  line-height: 60px;
+  line-height: 25px;
   text-transform: uppercase;
   font-size: 20px;
-  position: relative;
-  margin: 10px 0 20px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 15px 0;
+  text-decoration: underline;
+}
+.applyform-conatiner button#custom-button:hover {
+  color: #6CC24A;
 }
 .applyform-conatiner #custom-text {
-  display: inline-block;
-  padding: 5px 0 20px 20px;
+  display: block;
+  padding: 15px 0 15px 20px;
   color: #fff;
+  border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .cvsupport {
